--- a/config/config.yaml
+++ b/config/config.yaml
@@ -14,10 +14,13 @@ save_val_path: /runs/valid    # 单独运行验证程序时保存的路径
 max_length: 500   # 句子的最长长度
 embedding_dim: 256  # 每个单词用几个值表示
 batch_size: 512    # 训练时每个批次的大小
-epoch: 1     # 训练的轮数
+epoch: 50     # 训练的轮数
 learning_rate: 0.001   # 学习率
 num_workers: 0    # 读取数据的进程数
 
 # 模型相关参数设定
 nc: 31    # 类别数
 hidden_layer: 256   # 隐藏层数量(通道数)
+
+# LSTM模块参数
+lstm_hidden_layer: 256
